--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script defer type="module" src="src/js/controller.js"></script>
 
-    <title>forkify // Search over 1,000,000 recipes</title>
+    <title>forkifyxxx // Search over 1,000,000 recipes</title>
   </head>
 
   <body>
@@ -140,7 +140,9 @@
               <use href="src/img/icons.svg#icon-smile"></use>
             </svg>
           </div>
-          <p>Start by searching for a recipe or an ingredient. Have fun!</p>
+          <p>
+            xxxStartxxx by searching for a recipe or an ingredient. Have fun!
+          </p>
         </div>
 
         <!-- <div class="spinner">
